--- a/characters/templates/characters/index.html
+++ b/characters/templates/characters/index.html
@@ -1,9 +1,15 @@
+<a href="/characters/create/">Create new character!</a><hr>
+{% if selected_character %}
+Currently selected character : {{ selected_character }}<hr>
+{% else %}
+Select a character.<hr>
+{% endif %}
 {% if character_list %}
-    <ul>
     {% for character in character_list %}
-        <li><a href="/characters/{{ character.id }}/">{{ character.name }}</a></li>
+      	<a href="/characters/{{ character.id }}/">{{ character.name }}<br>
+    	<img src="{{ character.image }}" /></a><br>
+       	<a href="/characters/{{ character.id }}/delete">Delete</a><hr>
     {% endfor %}
-    </ul>
 {% else %}
     <p>You have no characters.</p>
 {% endif %}
