--- a/characters/templates/characters/index.html
+++ b/characters/templates/characters/index.html
@@ -1,4 +1,4 @@
-<a href="/characters/create/">Create new character!</a><hr>
+<a href="{% url 'create' %}">Create new character!</a><hr>
 {% if selected_character %}
 Currently selected character : {{ selected_character }}<hr>
 {% else %}
@@ -6,9 +6,10 @@ Select a character.<hr>
 {% endif %}
 {% if character_list %}
     {% for character in character_list %}
-      	<a href="/characters/{{ character.id }}/">{{ character.name }}<br>
-    	<img src="{{ character.image }}" /></a><br>
-       	<a href="/characters/{{ character.id }}/delete">Delete</a><hr>
+        <a href="{% url 'detail' character.id %}">{{ character.name }}<br>
+            <img src="{{ character.image }}" />
+        </a><br>
+        <a href="{% url 'delete' character.id %}">Delete</a><hr>
     {% endfor %}
 {% else %}
     <p>You have no characters.</p>
