--- a/characters/templates/characters/index.html
+++ b/characters/templates/characters/index.html
@@ -1,11 +1,13 @@
 <a href="/characters/create/">Create new character!</a><hr>
 {% if selected_character %}
 Currently selected character : {{ selected_character }}<hr>
+<a href="{% url 'overview' %}">Go to Village</a><hr>
 {% else %}
 Select a character.<hr>
 {% endif %}
 {% if character_list %}
     {% for character in character_list %}
+    {{character.id}}
       	<a href="/characters/{{ character.id }}/">{{ character.name }}<br>
     	<img src="{{ character.image }}" /></a><br>
        	<a href="/characters/{{ character.id }}/delete">Delete</a><hr>
