--- a/village/templates/village/overview.html
+++ b/village/templates/village/overview.html
@@ -10,9 +10,11 @@
 			{% if building.level = 0 %}
 				<li><a href="{% url 'upgrade' building.building_id.id %}">Build</a>
 					Resources required to build {{ building.building_id }}.
-					{% for x,y in building.building_id.cost.items %}
-						<li>{{ x }}: {{ y }}</li>
-					{% endfor %}
+					{% if building.building_id.cost %}
+						{% for x,y in building.building_id.cost.items %}
+							<li>{{ x }}: {{ y }}</li>
+						{% endfor %}
+					{% endif %}
 				</li>
 			{% endif %}
 			{% if building.level > 0 %}
@@ -21,9 +23,11 @@
 			{% if building.level >= 1 and building.level < building.building_id.max_level %}
 				<li><a href="{% url 'upgrade' building.building_id.id %}">Upgrade</a></li>
 				Cost:
-				{% for x,y in building.building_id.cost.items %}
-					<li>{{ x }}: {{ y }}</li>
-				{% endfor %}
+				{% if building.building_id.cost %}
+					{% for x,y in building.building_id.cost.items %}
+						<li>{{ x }}: {{ y }}</li>
+					{% endfor %}
+				{% endif %}
 			{% endif %}
 	</ul>
 {% endfor %}
